# spl-staking-program

./: Anchor.toml  README.md  package-lock.json  package.json
migrations/: deploy.ts
programs/simple_stake/: Cargo.toml
programs/simple_stake/src/: constants.rs  error.rs  lib.rs
programs/simple_stake/src/instructions/: claim.rs  initialize.rs  mod.rs  stake.rs  unstake.rs
programs/simple_stake/src/state/: initialize_config.rs  mod.rs  stake_config.rs
tests/: helper.ts  simple_stake.ts
