[package]
name = "simple_stake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_stake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "~1.17"
solana-sdk = "~1.17"
anyhow = "1.0.44"
solana-client = "~1.17"